--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,103 @@
-streamlit
-librosa
-numpy
-scipy
-matplotlib
-soundfile
-plotly
+absl-py==2.2.2
+altair==5.5.0
+astunparse==1.6.3
+attrs==25.3.0
+audioread==3.0.1
+blinker==1.9.0
+cachetools==5.5.2
+certifi==2025.1.31
+cffi==1.17.1
+charset-normalizer==3.4.1
+click==8.1.8
+colorama==0.4.6
+contourpy==1.3.2
+cycler==0.12.1
+decorator==5.2.1
+dm-tree==0.1.9
+docstring_parser==0.16
+einops==0.8.1
+etils==1.12.2
+flatbuffers==25.2.10
+fonttools==4.57.0
+fsspec==2025.3.2
+gast==0.6.0
+gitdb==4.0.12
+GitPython==3.1.44
+google-pasta==0.2.0
+grpcio==1.71.0
+h5py==3.13.0
+idna==3.10
+immutabledict==4.2.1
+importlib_resources==6.5.2
+Jinja2==3.1.6
+joblib==1.4.2
+jsonschema==4.23.0
+jsonschema-specifications==2025.4.1
+keras==3.9.2
+kiwisolver==1.4.8
+lazy_loader==0.4
+libclang==18.1.1
+librosa==0.11.0
+llvmlite==0.44.0
+Markdown==3.8
+markdown-it-py==3.0.0
+MarkupSafe==3.0.2
+matplotlib==3.10.1
+mdurl==0.1.2
+ml_dtypes==0.5.1
+msgpack==1.1.0
+namex==0.0.9
+narwhals==1.36.0
+numba==0.61.2
+numpy==2.1.3
+opt_einsum==3.4.0
+optree==0.15.0
+packaging==24.2
+pandas==2.2.3
+pillow==11.2.1
+platformdirs==4.3.7
+plotly==6.1.0
+pooch==1.8.2
+promise==2.3
+protobuf==4.21.12
+psutil==7.0.0
+pyarrow==19.0.1
+pycparser==2.22
+pydeck==0.9.1
+pygame==2.5.2
+Pygments==2.19.1
+pyparsing==3.2.3
+python-dateutil==2.9.0.post0
+pytz==2025.2
+referencing==0.36.2
+requests==2.32.3
+rich==14.0.0
+rpds-py==0.24.0
+scikit-learn==1.6.1
+scipy==1.15.2
+seaborn==0.13.2
+simple-parsing==0.1.7
+six==1.17.0
+smmap==5.0.2
+soundfile==0.13.1
+soxr==0.5.0.post1
+streamlit==1.45.1
+tenacity==9.1.2
+tensorboard==2.19.0
+tensorboard-data-server==0.7.2
+tensorflow==2.19.0
+tensorflow-datasets==4.9.8
+tensorflow-io-gcs-filesystem==0.31.0
+tensorflow-metadata==1.17.1
+termcolor==3.0.1
+threadpoolctl==3.6.0
+toml==0.10.2
+tornado==6.4.2
+tqdm==4.67.1
+typing_extensions==4.13.2
+tzdata==2025.2
+urllib3==2.4.0
+watchdog==6.0.0
+Werkzeug==3.1.3
+wrapt==1.17.2
+zipp==3.21.0
